changed model exercises

--- a/_toc.yml
+++ b/_toc.yml
@@ -10,6 +10,7 @@ parts:
     chapters:
     - file: docs/computer-vision.md
     - file: docs/fashion-mnist.ipynb
+    - file: docs/fashion-mnist-exercises.ipynb  
     - file: docs/convolutional.md  
     - file: docs/cnn.ipynb
   - caption: Regression
