added keras to toc

--- a/_toc.yml
+++ b/_toc.yml
@@ -20,6 +20,10 @@ parts:
   - caption: Regression
     chapters:
     - file: docs/regression-structured.md
+   - caption: Keras
+    chapters:
+    - file: docs/keras-sequential.md
+    - file: docs/keras-functional.md
   - caption: References
     chapters:
     - file: docs/reference.md
