--- a/_toc.yml
+++ b/_toc.yml
@@ -13,7 +13,7 @@ parts:
     - file: docs/fashion-mnist-exercises.ipynb  
     - file: docs/convolutional.md  
     - file: docs/cnn.ipynb
-  - caption: MNIST
+  - caption: CNN
     chapters:
     - file: docs/mnist-cnn.ipynb   
     - file: docs/mnist-tensorflow.ipynb
