--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,7 @@ bibtex_bibfiles:
   - references.bib
 
 repository:
-  url: https://github.com/kirenz/deep-learning  # Online location of your book
-#  path_to_book: docs  # Optional path to your book, relative to the repository root
+  url: https://github.com/kirenz/deep-learning
   branch: main
 
 html:
