--- a/_toc.yml
+++ b/_toc.yml
@@ -37,9 +37,9 @@ parts:
     - file: docs/structured_data_classification_functions.ipynb  
     - file: docs/keras-imdb.ipynb
     - file: docs/keras-time.ipynb
- # - caption: Explainable AI dat
- #   chapters:
- #   - file: docs/
+  - caption: Explainable AI
+    chapters:
+    - file: docs/shap_structured_data_classification.ipynb
  #   - file: docs/     
   - caption: References
     chapters:
