--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ docs/jena_climate_2009_2016.csv.zip
 docs/jena_climate_2009_2016.csv
 docs/PetImages
 docs/kagglecatsanddogs_3367a.zip
+docs/save_at_1.h5
+docs/save_at_2.h5
